--- a/app/views/irm/report_types/_new_step_1.html.erb
+++ b/app/views/irm/report_types/_new_step_1.html.erb
@@ -47,7 +47,7 @@
                   <tbody>
                       <tr>
                         <td class="labelCol"><label for="report_type_code"><%=t(:label_irm_report_type_code)%></label></td>
-                        <td class="dataCol"><%=f.text_field :code, :required=>true ,:id=>"report_type_code",:irm_uppercase=>true%></td>
+                        <td class="dataCol"><%=f.text_field :code, :required=>true ,:irm_uppercase=>true,:id=>"report_type_code",:irm_uppercase=>true%></td>
                         <td class="labelCol empty">&nbsp;</td>
                         <td class="dataCol empty">&nbsp;</td>
                       </tr>
