--- a/app/views/skm/file_managements/edit.html.erb
+++ b/app/views/skm/file_managements/edit.html.erb
@@ -1,5 +1,5 @@
 <%= app_title %>
-<% form_tag({ :action=>"update"}, :id =>"file_form", :name => "file_form", :multipart => true) do %>
+<%= form_tag({ :action=>"update"}, :id =>"file_form", :name => "file_form", :multipart => true) do %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
