--- a/app/views/skm/file_managements/index.html.erb
+++ b/app/views/skm/file_managements/index.html.erb
@@ -1,7 +1,9 @@
-<%= app_title %>
+<%= common_title(:model_meaning=>t(:label_skm)) %>
+<div class="toolbar">
+    <span class="toggleButtons">
+      <%= link_to(toggle_img("listViewIcon"),{:controller => "skm/entry_headers",:action=>"index"},{:alt=>t(:label_skm_entry_header),:title=>t(:label_skm_entry_header)}) %>
+      <%= link_to(toggle_img("singleUserViewIcon"),{:controller => "skm/entry_headers",:action=>"my_favorites"},{:alt=>t(:label_skm_entry_header_my_favorites),:title=>t(:label_skm_entry_header_my_favorites)}) %>
+      <%= link_to(toggle_img("multiUserViewIcon",true),{:controller => "skm/file_managements"},{:href=>"javascript:void(0)",:alt=>t(:label_skm_file_management),:title=>t(:label_skm_file_management)}) %>
+    </span>
+</div>
 <%= render "data_grid" %>
-
-<%= content_for :sidebar do%>
-    <%= render "skm/entry_headers/sidebar_navigate_menu"%>
-    <%= render :partial =>"/irm/common/recently_objects" %>
-<% end -%>
