当调查问卷已经有人参与调查时，“在所有事故单中显示”选项不可被修改。并加入提示功能

--- a/app/views/csi/surveys/_edit_form.html.erb
+++ b/app/views/csi/surveys/_edit_form.html.erb
@@ -69,18 +69,58 @@
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
-           <tr>
-              <td class="labelCol"><label><%=(t :label_csi_survey_with_incident_request)%></label></td>
-              <td class="dataCol"><%= f.check_box :with_incident_request%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_csi_survey_due_dates)%></label></td>
-              <td class="dataCol"><%=f.text_field :due_dates,:size=>18, :required => true%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
+            <% if check_survey_result_exist?(@survey.id) && !@survey.enabled? %>
+                <tr>
+                  <td class="labelCol"><label><%=(t :label_csi_survey_with_incident_request)%></label></td>
+                  <td class="dataCol"><%= f.check_box :with_incident_request%></td>
+                  <td class="labelCol empty">&nbsp;</td>
+                  <td class="dataCol empty">&nbsp;</td>
+                </tr>
+                <tr>
+                  <td class="labelCol"><label><%=(t :label_csi_survey_due_dates)%></label></td>
+                  <td class="dataCol"><%=f.text_field :due_dates,:size=>18, :required => true%></td>
+                  <td class="labelCol empty">&nbsp;</td>
+                  <td class="dataCol empty">&nbsp;</td>
+                </tr>
+                <script type="text/javascript">
+                GY.use(function(Y){
+                    if(Y.one("#csi_survey_with_incident_request").get("checked"))
+                    {
+                       Y.one("#csi_survey_due_dates").removeAttribute("disabled");
+                    }
+                    else
+                    {
+
+                       Y.one("#csi_survey_due_dates").setAttribute("disabled", true);
+                    }
+                    Y.one("#csi_survey_with_incident_request").on("click", function(e){
+                        if(Y.one("#csi_survey_with_incident_request").get("checked"))
+                        {
+                           Y.one("#csi_survey_due_dates").removeAttribute("disabled");
+                        }
+                        else
+                        {
+
+                           Y.one("#csi_survey_due_dates").setAttribute("disabled", true);
+                        }
+                    })
+                })
+                </script>
+            <% else %>
+                <tr>
+                  <td class="labelCol"><label><%=(t :label_csi_survey_with_incident_request)%></label></td>
+                  <td class="dataCol"><%= check_img(@survey.with_incident_request)%><%= info_icon(t(:info_csi_survey_some_enabled_can_not_be_change)) %></td>
+                  <td class="labelCol empty">&nbsp;</td>
+                  <td class="dataCol empty">&nbsp;</td>
+                </tr>
+                <tr>
+                  <td class="labelCol"><label><%=(t :label_csi_survey_due_dates)%></label></td>
+                  <td class="dataCol"><%= f.text_field :due_dates,:size=>18, :disabled => true, :info => t(:info_csi_survey_some_enabled_can_not_be_change)%>
+                  <%= info_icon(t(:info_csi_survey_due_dates)) %></td>
+                  <td class="labelCol empty">&nbsp;</td>
+                  <td class="dataCol empty">&nbsp;</td>
+                </tr>
+            <% end %>
         </tbody>
       </table>
     </div>
@@ -157,27 +197,3 @@
 
 <%= calendar_view("date1","date1","cal1")%>
 <%= calendar_view("date2","date2","cal2")%>
-<script type="text/javascript">
-GY.use(function(Y){
-    if(Y.one("#csi_survey_with_incident_request").get("checked"))
-    {
-       Y.one("#csi_survey_due_dates").removeAttribute("disabled");
-    }
-    else
-    {
-
-       Y.one("#csi_survey_due_dates").setAttribute("disabled", true);
-    }
-    Y.one("#csi_survey_with_incident_request").on("click", function(e){
-        if(Y.one("#csi_survey_with_incident_request").get("checked"))
-        {
-           Y.one("#csi_survey_due_dates").removeAttribute("disabled");
-        }
-        else
-        {
-
-           Y.one("#csi_survey_due_dates").setAttribute("disabled", true);
-        }
-    })
-})
-</script>
