--- a/public/themes/salesforce2/stylesheets/common.css
+++ b/public/themes/salesforce2/stylesheets/common.css
@@ -13,10 +13,9 @@ textarea {font-size: 14px;}
 .un-display-N{display:inline}
 .screen_shot_frame{height:320px;width:420px;}
 body .infoIcon {
-    background-image: url("../images/master.png");
-    background-position: 0 -162px;
-    height: 16px;
-    width: 16px;
+    background-image: url("../images/info_sprite.png");
+    background-position: left top;
+    height: 15px;
 }
 body .infoIcon:hover{
     background-position: left -19px;
