--- a/app/views/skm/entry_headers/_edit_form.html.erb
+++ b/app/views/skm/entry_headers/_edit_form.html.erb
@@ -1,7 +1,7 @@
 <%= app_title %>
 <script type="text/javascript" src="/javascripts/ext4-all.js"></script>
 <link rel="stylesheet" type="text/css" href="/themes/salesforce2/stylesheets/ext4-all.css"></link>
-<%= form_for(@entry_header,:url=>{:action=>"update"},:builder => LabellingFormBuilder, :html => {:name => "edit_form", :id => "edit_form"}) do |f| %>
+<%= form_for(@entry_header,:url=>{:action=>"update"},:builder => LabellingFormBuilder, :html => {:name => "edit_form", :id => "edit_form",:multipart => true}) do |f| %>
 <%= f.hidden_field :column_ids %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
@@ -80,6 +80,43 @@
       </table>
     </div>
     <% end %>
+
+    <div class="pbSubheader tertiaryPalette">
+      <h3><%= t(:label_skm_entry_header_attachments) %></h3>
+    </div>
+    <div class="pbSubsection">
+      <table cellpadding="0" cellspacing="0" border="0">
+        <thead>
+          <tr>
+            <th width="5%"></th>
+            <th width="40px"></th>
+            <th><%= t :label_skm_file_name %></th>
+            <th><%= t :label_skm_file_category %></th>
+            <th><%= t :description%></th>
+          </tr>
+        </thead>
+        <tbody id="file_body">
+            <tr id="file_0">
+              <td class="dataCol"></td>
+              <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(0);"} %></td>
+              <td class="dataCol"><%=file_field_tag "file[0][file]"%></td>
+              <td class="dataCol"><%=select_tag "file[0][file_category]", options_for_select(available_file_categories)%></td>
+              <td class="dataCol"><%=text_field_tag "file[0][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
+            </tr>
+            <tbody id="exist_attachments_list">
+                <%= list_exist_skm_entry_attachments(@entry_header.attachments, @entry_header.id) %>
+            </tbody>
+        <tbody>
+            <tr>
+              <td class="dataCol"></td>
+              <td class="dataCol"></td>
+              <td class="dataCol"><%= link_to t(:label_skm_file_add_line), {}, {:href => "javascript:void(0);", :onclick => "generate_line();"} %></td>
+              <td class="dataCol"></td>
+              <td class="dataCol"></td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
   <div class="pbBottomButtons">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -161,4 +198,42 @@ Ext.onReady(function() {
     });
 
 });
+</script>
+
+<script type="text/javascript">
+  function delete_subject(tar){
+    GY.use(function(Y){
+        Y.one("#tr_" + tar).remove();
+    })
+  }
+
+  function add_subject(tar){
+    GY.use(function(Y){
+        Y.one("#tr_");
+    })
+  }
+
+
+  var line_count = 1;
+
+ function delete_line(l)
+ {
+      GY.use(function(Y){
+          Y.one("#file_" + l).remove();
+      })
+  }
+  function generate_line()
+  {
+      GY.use(function(Y){
+          var node = Y.Node.create('<tr id="file_' + line_count + '">'
+                  + '<td class="dataCol"></td>'
+                  + '<td class="dataCol"><a onclick="delete_line(' + line_count + ');" href="javascript:void(0);"><%= t :delete%></a></td>'
+                  + '<td class="dataCol"><input type="file" name="file[' + line_count + '][file]" id="file_' + line_count + '_file"></td>'
+                  + '<td class="dataCol"><select name="file[' + line_count + '][file_category]" id="file_' + line_count + '_file_category">' + '<%= raw(options_for_select(available_file_categories).gsub!(/\n+/, ""))%>' + '</select></td>'
+                  + '<td class="dataCol"><input type="text" value="" rows="3" name="file[' + line_count + '][description]" id="file_' + line_count + '_description" cols="35">(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>'
+                  + '</tr>');
+          Y.one("#file_body").appendChild(node);
+      });
+      line_count ++;
+  }
 </script>
