移除搜索框上的选项链接

--- a/app/views/irm/search/_box.html.erb
+++ b/app/views/irm/search/_box.html.erb
@@ -8,7 +8,7 @@
         <%= submit_tag(t(:search),:id=>"phSearchButton") %>
       </div>
     </div>
-    <div id="searchOptionsContainer" class="headerSearchOptions">
+    <div id="searchOptionsContainer" class="headerSearchOptions" style="display:none;">
       <a href="javascript:void(0);" id="headerSearchOptionsLink" class="headerSearchOptionsLink"><%= t(:options) %></a>
     </div>
   </div>
