修正上传附件的布局

--- a/app/views/irm/bulletins/_edit_form.html.erb
+++ b/app/views/irm/bulletins/_edit_form.html.erb
@@ -106,9 +106,9 @@
           <tr>
             <th width="5%"></th>
             <th width="40px"></th>
-            <th><%= t :label_skm_file_name %></th>
-            <th><%= t :label_skm_file_category %></th>
-            <th><%= t :description%></th>
+            <th class="dataCol"><%= t :label_skm_file_name %></th>
+            <th class="dataCol"><%= t :label_skm_file_category %></th>
+            <th class="dataCol"><%= t :description%></th>
           </tr>
         </thead>
         <tbody id="file_body">
