修正翻译错误

--- a/app/views/icm/impact_ranges/_edit_form.html.erb
+++ b/app/views/icm/impact_ranges/_edit_form.html.erb
@@ -64,7 +64,7 @@
             </tr>
             <tr>
 
-              <td class="labelCol empty"><label for="status_code"><%=(t :label_irm_script_status_code)%></label></td>
+              <td class="labelCol empty"><label for="status_code"><%=(t :status)%></label></td>
               <td class="dataCol"><%=f.select :status_code, available_active_status%></td>
               <td class="labelCol"></td>
               <td class="dataCol"></td>
