--- a/app/views/icm/incident_phases/index.html.erb
+++ b/app/views/icm/incident_phases/index.html.erb
@@ -28,7 +28,7 @@
                        {:key=>"name",:label=>t(:label_icm_incident_phase_name),:searchable=>true},
                        {:key=>"phase_code",:label=>t(:label_icm_incident_phase_phase_code),:searchable=>true},
                        {:key=>"display_sequence",:label=>t(:display_sequence)},
-                       {:key=>"status_meaning",:label=>t(:label_irm_script_status_code),:width=>"70px"}
+                       {:key=>"status_meaning",:label=>t(:status),:width=>"70px"}
                        ],:paginator_box=>"phasePaginator",:search_box=>"incidentPhasesSearchBox")%>
         <div id="phasePaginator"></div>
       </div>
