--- a/app/views/icm/incident_statuses/index.html.erb
+++ b/app/views/icm/incident_statuses/index.html.erb
@@ -104,7 +104,7 @@
                    {:key=>"display_sequence",:label=>t(:display_sequence)},
                    {:key=>"default_flag",:label=>t(:default_flag),:formatter=>"Y.irm.template", :width => "40px"},
                    {:key=>"close_flag",:label=>t(:label_icm_incident_close_flag),:formatter=>"Y.irm.template", :width => "40px"},
-                   {:key=>"status_meaning",:label=>t(:label_irm_script_status_code),:width=>"70px"}],
+                   {:key=>"status_meaning",:label=>t(:status),:width=>"70px"}],
                    {:paginator_box=>"statusPaginator",:search_box=>"incidentStatusesSearchBox"})%>
         <div id="statusPaginator"></div>
       </div>
