--- a/app/views/icm/incident_statuses/show.html.erb
+++ b/app/views/icm/incident_statuses/show.html.erb
@@ -37,7 +37,7 @@
               <td class="dataCol"><%= check_img(@incident_status.default_flag)%></td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(t :label_irm_script_status_code)%></label></td>
+              <td class="labelCol"><label><%=(t :status)%></label></td>
               <td class="dataCol"><%= @incident_status[:status_meaning]%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
