--- a/app/views/icm/priority_codes/index.html.erb
+++ b/app/views/icm/priority_codes/index.html.erb
@@ -99,7 +99,7 @@
                    {:key=>"priority_code",:label=>t(:label_icm_priority_code_priority_code),:searchable=>true},
                    {:key=>"name",:label=>t(:label_icm_priority_code_name),:searchable=>true},
                    {:key=>"weight_values",:label=>t(:label_icm_priority_code_weight_values)},
-                   {:key=>"status_meaning",:label=>t(:label_irm_script_status_code),:width=>"70px"}],
+                   {:key=>"status_meaning",:label=>t(:status),:width=>"70px"}],
                    {:paginator_box=>"priorityPaginator",:search_box=>"priorityCodesSearchBox"})%>
         <div id="priorityPaginator"></div>
       </div>
