--- a/app/views/icm/rule_settings/index.html.erb
+++ b/app/views/icm/rule_settings/index.html.erb
@@ -35,7 +35,7 @@
                    {:key=>"respond_date_changable",:label=>t(:label_icm_rule_setting_respond_date_changable),:formatter=>"Y.irm.template"},
                    {:key=>"slove_date_changable",:label=>t(:label_icm_rule_setting_description),:formatter=>"Y.irm.template"},
                    {:key=>"auto_closure_days",:label=>t(:label_icm_rule_setting_auto_closure_days)},
-                   {:key=>"status_meaning",:label=>t(:label_irm_script_status_code),:width=>"70px"}],
+                   {:key=>"status_meaning",:label=>t(:status),:width=>"70px"}],
                    {:paginator_box=>"rulePaginator"})%>
         <div id="rulePaginator"></div>
       </div>
