--- a/app/views/icm/urgence_codes/index.html.erb
+++ b/app/views/icm/urgence_codes/index.html.erb
@@ -32,7 +32,7 @@
                    {:key=>"name",:label=>t(:label_icm_urgence_code_name),:searchable=>true},
                    {:key=>"display_sequence",:label=>t(:display_sequence)},
                    {:key=>"default_flag",:label=>t(:default_flag),:formatter=>"Y.irm.template",:searchable=>true, :width => "40px"},
-                   {:key=>"status_meaning",:label=>t(:label_irm_script_status_code),:width=>"70px"}],
+                   {:key=>"status_meaning",:label=>t(:status),:width=>"70px"}],
                    {:paginator_box=>"urgencePaginator",:search_box=>"urgenceCodesSearchBox"})%>
         <div id="urgencePaginator"></div>
       </div>
