--- a/app/views/irm/regions/_edit_form.html.erb
+++ b/app/views/irm/regions/_edit_form.html.erb
@@ -29,7 +29,7 @@
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_region_region_code)%></label></td>
               <td class="dataCol"><%=@region.region_code%></td>
-              <td class="labelCol"><label><%=(t :label_irm_script_status_code)%></label></td>
+              <td class="labelCol"><label><%=(t :status)%></label></td>
               <td class="dataCol"><%=f.select :status_code,options_from_collection_for_select(available_status,:lookup_code,:wrap_meaning,@region.status_code)%></td>
             </tr>
             <tr>
