--- a/app/views/icm/impact_ranges/index.html.erb
+++ b/app/views/icm/impact_ranges/index.html.erb
@@ -32,7 +32,7 @@
                        {:key=>"impact_code",:label=>t(:label_icm_impact_range_impact_code),:searchable=>true},
                        {:key=>"display_sequence",:label=>t(:display_sequence)},
                        {:key=>"default_flag",:label=>t(:default_flag),:searchable=>true,:formatter=>"Y.irm.template", :width => "80px"},
-                       {:key=>"status_meaning",:label=>t(:label_irm_script_status_code),:width=>"70px"}
+                       {:key=>"status_meaning",:label=>t(:status),:width=>"70px"}
                        ],{:paginator_box=>"impactPaginator",:search_box=>"impactRangesSearchBox"})%>
         <div id="impactPaginator"></div>
       </div>
