--- a/app/views/icm/rule_settings/_edit_form.html.erb
+++ b/app/views/icm/rule_settings/_edit_form.html.erb
@@ -40,7 +40,7 @@
               <td class="dataCol"><%= f.check_box :slove_date_changable%></td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(t :label_irm_script_status_code)%></label></td>
+              <td class="labelCol"><label><%=(t :status)%></label></td>
               <td class="dataCol"><%=f.select :status_code,"<option value=\"\">--- #{t(:actionview_instancetag_blank_option)} ---</option>".html_safe +
                                                 options_from_collection_for_select(available_status,:lookup_code,:wrap_meaning,@rule_setting.status_code)%></td>
 
