--- a/app/views/irm/currencies/_edit_form.html.erb
+++ b/app/views/irm/currencies/_edit_form.html.erb
@@ -36,7 +36,7 @@
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_currency_name)%></label></td>
               <td class="dataCol"><%=f.text_field :name,:value=>@currency[:name], :required=>true %></td>
-              <td class="labelCol empty"><label><%=(t :label_irm_script_status_code)%></label></td>
+              <td class="labelCol empty"><label><%=(t :status)%></label></td>
               <td class="dataCol empty"><%=f.select :status_code,"<option value=\"\">--- #{t(:actionview_instancetag_blank_option)} ---</option>".html_safe +
                                                 options_from_collection_for_select(available_status,:lookup_code,:wrap_meaning,@currency.status_code)%></td>
             </tr>
