修正上传头像与个人信息修改功能中存在的BUG

--- a/app/views/irm/my_info/edit.html.erb
+++ b/app/views/irm/my_info/edit.html.erb
@@ -15,7 +15,7 @@
     </table>
   </div>
   <div class="pbBody">
-    <%= error_for @identity%>
+    <%= error_for @person %>
     <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
       <span class="pbSubExtra">
         <span class="requiredLegend">
