--- a/app/views/irm/my_avatar/edit.html.erb
+++ b/app/views/irm/my_avatar/edit.html.erb
@@ -15,6 +15,7 @@
     </table>
   </div>
   <div class="pbBody">
+    <%= error_for @person %>
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
