显示知识库中的分行

--- a/app/views/skm/entry_headers/show.html.erb
+++ b/app/views/skm/entry_headers/show.html.erb
@@ -40,7 +40,7 @@
           <table class="detailList" cellpadding="0" cellspacing="0" border="0">
             <tbody>
                 <tr>
-                  <td><%= raw(e.entry_content) %></td>
+                  <td><pre><%= raw(e.entry_content) %></pre></td>
                 </tr>
             </tbody>
           </table>
