--- a/app/views/icm/incident_journals/_applyable_entry_header.html.erb
+++ b/app/views/icm/incident_journals/_applyable_entry_header.html.erb
@@ -4,7 +4,7 @@
 <% @entry_header.entry_details.each do |e| %>
     <b><%= raw(e.element_name) %></b>
     <br/>
-    <%= raw(e.entry_content) %>
+    <%= raw(e.entry_content.gsub("\n","<br/>")) %>
     <br/>
     <br/>
 <% end %>
