用户登录密码错误时，按照密码策略对帐户自动锁定

--- a/app/views/irm/common/edit_password.html.erb
+++ b/app/views/irm/common/edit_password.html.erb
@@ -39,7 +39,7 @@
                     <div class="pbSubsection">
                       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
                         <tbody>
-                            <% if Irm::PasswordPolicy.expire?(@person.password_updated_at) %>
+                            <% if Irm::PasswordPolicy.expire?(@person.password_updated_at,@person.opu_id) %>
                               <tr>
                                 <td class="labelCol"><label></label></td>
                                 <td class="dataCol"><label style="color:red;"><%=t(:label_irm_psw_policy_expire)%></label></td>
@@ -48,7 +48,7 @@
                               </tr>
                               <tr>
                                 <td class="labelCol"><label><%=(t :label_irm_psw_policy_expire_in)%></label></td>
-                                <td class="dataCol"><%= Irm::PasswordPolicy.first.expire_in%></td>
+                                <td class="dataCol"><%= Irm::PasswordPolicy.current(@person.opu_id).expire_in%></td>
                                 <td class="labelCol empty">&nbsp;</td>
                                 <td class="dataCol empty">&nbsp;</td>
                               </tr>
@@ -60,7 +60,7 @@
                               </tr>
                               <tr>
                                 <td class="labelCol"><label><%=(t :label_irm_psw_policy_requirement)%></label></td>
-                                <td class="dataCol" width="82%" colspan="3"><%= Irm::PasswordPolicy.validate_message%></td>
+                                <td class="dataCol" width="82%" colspan="3"><%= Irm::PasswordPolicy.current(@person.opu_id).validate_message%></td>
                               </tr>
                             <% end %>
                             <tr>
