--- a/app/views/irm/common/login.html.erb
+++ b/app/views/irm/common/login.html.erb
@@ -9,8 +9,8 @@
                 <div class="content_new">
                 <%= form_tag({:action=> "login"},{:id=>"login_form"}) do %>
                    <%= back_url_hidden_field_tag %>
-                      <% if flash[:error] %>
-                      <div class="loginError"><%= flash[:error] %></div>
+                      <% if params[:error] %>
+                      <div class="loginError"><%= params[:error] %></div>
                       <% end %>
                       <div class="inputs">
                         <div class="inputbox">
