1.建立default theme 2.采用div+css方式分割layout 3.对CSS进行更精细的分类

--- a/app/views/csi/surveys/show_result.html.erb
+++ b/app/views/csi/surveys/show_result.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag "/javascripts/yui3.3/datatable/assets/skins/sam/datatable.css"%>
 
 <div class="page-title">
-  <div class="ptBody">
+  <div class="pt-body">
     <div class="content">
       <h1 class="pageType"><%= t(:label_csi_survey_info) %></h1>
       <h2 class="pageDescription"><%=t(:label_csi_survey_result) %></h2>
