--- a/app/views/irm/setting/_level_one.html.erb
+++ b/app/views/irm/setting/_level_one.html.erb
@@ -1,5 +1,5 @@
 <style type="text/css">
-  body .page-title .ptBody h1.noSecondHeader {
+  body .page-title .pt-body h1.noSecondHeader {
     color: #000000;
     font-size: 2em;
     font-weight: normal;
@@ -8,7 +8,7 @@
 }
 </style>
 <div class="page-title">
-  <div class="ptBody secondary-palette">
+  <div class="pt-body secondary-palette">
     <div class="content">
       <img title="" class="page-title-icon" alt="" src="/images/s.gif">
       <h1 class="pageType noSecondHeader"><%=@menu_entry[:name]%></h1>
